; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_avc.c_ff_avc_parse_nal_units_buf.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_avc.c_ff_avc_parse_nal_units_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_avc_parse_nal_units_buf(i32* %0, i32** %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = call i32 @avio_open_dyn_buf(i32** %8)
  store i32 %10, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* %9, align 4
  store i32 %14, i32* %4, align 4
  br label %27

15:                                               ; preds = %3
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @ff_avc_parse_nal_units(i32* %16, i32* %17, i32 %19)
  %21 = load i32**, i32*** %6, align 8
  %22 = call i32 @av_freep(i32** %21)
  %23 = load i32*, i32** %8, align 8
  %24 = load i32**, i32*** %6, align 8
  %25 = call i32 @avio_close_dyn_buf(i32* %23, i32** %24)
  %26 = load i32*, i32** %7, align 8
  store i32 %25, i32* %26, align 4
  store i32 0, i32* %4, align 4
  br label %27

27:                                               ; preds = %15, %13
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @avio_open_dyn_buf(i32**) #1

declare dso_local i32 @ff_avc_parse_nal_units(i32*, i32*, i32) #1

declare dso_local i32 @av_freep(i32**) #1

declare dso_local i32 @avio_close_dyn_buf(i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
